samples/_failures_safe/1761399335_687532_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e99c1e3.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_7e99c1e3.c:174:13: error: expected ‘;’ at end of input
  174 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_7e99c1e3.c:174:5: error: expected declaration or statement at end of input
  174 |     return 0
      |     ^~~~~~
